# Personal_Ai_Employee

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  REMOVED_FILES.md  STATUS.md  TROUBLESHOOTING.md  setup.bat  setup.sh
.claude/: settings.local.json
Bronze/: .gitignore  COMPLETION_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  pyproject.toml  start_watcher.bat  start_watcher.sh  test_setup.py
Bronze/.claude/: settings.local.json
Bronze/.claude/skills/process-vault-tasks/: SKILL.md
Bronze/AI_Employee_Vault/: Company_Handbook.md  Dashboard.md
Bronze/AI_Employee_Vault/Done/: FILE_20260222_120000_test_document.txt.md  FILE_20260222_123000_test_task.md.md
Bronze/AI_Employee_Vault/Inbox/: test_document.txt
Bronze/AI_Employee_Vault/Plans/: PLAN_20260222_120000_test_document.md  PLAN_20260222_123000_test_task.md
Bronze/watchers/: base_watcher.py  filesystem_watcher.py
Gold/: .env.example  .gitignore  ARCHITECTURE.md  COMPLETION_SUMMARY.md  FINAL_SUMMARY.md  GET_STARTED.md  HANDOFF.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  QUICKSTART.md  README.md  audit_logger.py  error_recovery.py  init_vault.py  orchestrator.py  orchestrator_config.json  ralph_wiggum_loop.py  requirements.txt  setup.bat  setup.sh  validate_setup.py
Platinum/: .gitignore  PLATINUM_COMPLETION_SUMMARY.md  README.md  base_watcher.py  claude_config.json  deploy_cloud.sh  filesystem_watcher.py  finance_watcher.py  gmail_watcher.py  mcp-config.json  orchestrator.py  ralph_wiggum_loop.py  requirements.txt  setup.py  setup_local.bat  (+1 more)
(+69 files in other folders)
